# AkashicRecord

./: LICENSE  README.md  release.nix
APL/: cowsay.apl  tetreditor.apl
Arduino/BinaryClock/: BinaryClock.ino
Arduino/DubstepGun/: DubstepGun.ino
Arduino/Mimimote/: Mimimote.ino
Arduino/SonicGuuun/: SonicGuuun.ino
Arduino/TheDroneMustFly/: TheDroneMustFly.ino
Arduino/Turret-thing/: Turret-thing.ino
Arduino/irReader/: irReader.ino
Arduino/irSender/: irSender.ino
Arduino/prank_na_shkolu_programma/: prank_na_shkolu_programma.ino
Arduino/screamboilo/: screamboilo.ino
Automate/: Audio Meter.flo  Audio Meter.txt  Background Rotator.flo  Background Rotator.txt  Heartbeat Simulator.flo  Heartbeat Simulator.txt  Magnet Monitor.flo  Movement Alert.flo
Bash/: funktsiiDannykh.sh  massMP3ToCDWAV.sh  massNormalizeMP3.sh  mkvTOMp4.sh  playMusic.sh  processMusic.sh
Brainfuck/: multiply.bf
Brainfuck/BASICfuck Code/: cat.bf  cyclingBorderColor.bf  helloWorld.bf  randomMaze.bf  reverseCat.bf
C/Brainblast-Toolkit/: Makefile  bytecode_compiler.c  bytecode_compiler.h  keyboard.h  opcodes.c  opcodes.h  repl.c  screen.c  screen.h  text_buffer.c  text_buffer.h  types.h
C/TLPIN/: .gitignore  array.h  build.sh  tlpin.c
C64-BASIC/: cowsay.bas  fibbonacci.bas  hellord.bas  keycodes.bas  maze.bas  rice.bas  truthMachine.bas
CPlusPlus/: KeyGen.cpp  LiscenseBS2_RE.cpp  LiscenseBS_RE.cpp
CPlusPlus/CoL-Dar/: CoL-Dar.ino
CPlusPlus/FahrenheitToCelcius/: TempUnitConverter.cpp
CPlusPlus/MacroDoi/: LICENSE  README.md  README.ru-RU.md  README.tok.md
CPlusPlus/ilo-li-sina/: .gitignore  CMakeLists.txt  README.md  nasin_kepeken.md  paliELipuToki.py  shell.nix
CPlusPlus/ilo-li-sina/lipu_pana/: cat.ils  fizzbuzz.ils  iloTruthMachine.ils  ilo_REPL.ils  maze.ils  quadratic.ils  soweliPiOkoTawa.ils  theOnlyThingIKnowForReal.ils  tokiEToki.ils  turingCompletness.ils
CPlusPlus/ilo-li-sina/nimi_en_toki/: en_US.lang  ru_RU.lang  tok.lang
CPlusPlus/ilo-li-sina/src/: ilo_li_sina.cpp
CPlusPlus/ilo-li-sina/src/ante_toki/: ante_toki.cpp  ante_toki.hpp
CPlusPlus/ilo-li-sina/src/ilo/: kipisi.cpp  kipisi.hpp  toki.cpp  toki.hpp
CPlusPlus/ilo-li-sina/src/ilo/lawa/: lawa.cpp  lawa.hpp  nimi_wawa.cpp  nimi_wawa.hpp  sona_lawa.hpp
CPlusPlus/ilo-li-sina/src/ilo/pali/: kasi.cpp  kasi.hpp  pali.cpp  pali.hpp
CPlusPlus/ilo-li-sina/src/kepeken/: ike.cpp  ike.hpp  lawa_OS.cpp  lawa_OS.hpp  poki_Map.hxx  toki.cpp  toki.hpp
Circuits/FalstadCircuitSimulator/: Audio Amplifier 1.txt  Capacitor Timer 1 Second.txt  Clock Inverter Audio.txt  Electromagnet Alternator.txt  Opamp AC to Square Wave.txt  README.md
Emacs-Lisp/: .emacs
Emacs-Lisp/bungusmacs/: .gitignore  README.md  init.el
Entropy/: PasswordGenerator.en
Erlang/poltergeist/: .gitignore  Emakefile  README.md  emake.escript  flake.nix  poltergeist.config
Haskell/: CodinGame-ThereIsNoSpoonEp1.hs  LinkedList.hs  bruteforce-android-oem-unlock.hs  git-pull-subdirectories.hs
Haskell/Conways-Ivory-Tower/: ConwaysIvoryTower.cabal  LICENSE  README.md  package.yaml  stack.yaml
Haskell/TTesting/: Fibbonachi.hs  Fizzbuzz.hs  TruthMachine.hs  fuckaround.hs
Java/: Cat.java  CursorPos.java  InsulinCalc.java  Makeme.java  Paint1.java  Paint2.java  Pet.java  ProcessMinifiedJS.java
JavaScript/: miningRobot.js
Lua/: test.lua
OpenSCAD/: README.md
Python/: BEEEEEEEEEEEEEEEP.py  Create Players - Stick Fight.py  ModuleSixMilestone.py  NameAge.py  ScriptToOpencomputers.py  binaryStringSearch.py  coolLaserThing.py  cosmicTimeLineThing.py  despacito.py  encrypter.py  fileStuffer.py  matrixTerminalSaver.py  morse2Anglishkom.py  noiseGenerator.py  password.py  textCorruption.py  unsign2SignByte.py  uploadFiles.py  vinegarSodaCalc.py
Python/Bosanski-Kalkulator/: .gitignore  CHANGELOG.md  README.md  setup.cfg
Python/Bosanski-Kalkulator/src/bosanski_kalkulator/: main.py
RPN-HP-38G-Calculator/: -Sound.txt  Akermann-Peter.txt  NthFibonacci.txt  Phi.txt
x86_64-Assembly/: cancer.asm
(+1208 files in other folders)
