[metadata]
name = bosanski_kalkulator
version = 0.1.2
author = ona li toki e jan Epiphany tawa mi
description = najbolji kalkulator
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = text/markdown
keywords = Bosanski Kalkulator, calculator, kalkulator, bosnian, bosnia, bosna, bosanski
license = MIT
platforms = Windows, POSIX, MacOS
classifiers =
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Artistic Software
    Topic :: Utilities
home_page = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/Bosanski-Kalkulator
download_url = https://github.com/ona-li-toki-e-jan-Epiphany-tawa-mi/Bosanski-Kalkulator/releases

[options]
package_dir=
    =src
packages=find:
include_package_data = True
install_requires =
    PySimpleGUI
    playsound

[options.package_data]
bosanski_kalkulator = images/*, audio/*

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    kalkulator = bosanski_kalkulator.main:main